# cpp-trading-engine-001_unfinished

./: CMakeLists.txt  info.txt
config/: Config.cpp
data/: AUDCAD1H.csv  EURUSD1H.csv  historical_data.csv
db/: Database.cpp  RedisCache.cpp
include/: Config.h  DataProcessing.h  Database.h  Logger.h  MarketData.h  MemoryManager.h  PatternDetection.h  PatternProcessing.h  RedisCache.h  TradeExecution.h
src/: DataProcessing.cpp  MarketData.cpp  MarketData.h  PatternDetection.cpp  PatternMatching.cpp  PatternMatching.h  PatternProcessing.cpp  TradeExecution.cpp  main.cpp
